--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="drag_indicator">Drag Indicator</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="shared_element_back">search_to_back</string>
 </resources>
